found_bugs/kotlin/7/compiler_output
program.kt:10:8: error: type mismatch: inferred type is X<out A> but X<A> was expected
   foo(tmp)
          ^
